--- a/Software/Analysis Monitor/Analysis Monitor/Analysis Monitor.csproj
+++ b/Software/Analysis Monitor/Analysis Monitor/Analysis Monitor.csproj
@@ -81,9 +81,11 @@
     <Compile Include="FrmSampleEvidention.Designer.cs">
       <DependentUpon>FrmSampleEvidention.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\Samples.cs" />
+    <Compile Include="Models\Patient.cs" />
+    <Compile Include="Models\Sample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\PatientRepository.cs" />
     <Compile Include="Repositories\SampleRepository.cs" />
     <EmbeddedResource Include="FrmSampleEvidention.resx">
       <DependentUpon>FrmSampleEvidention.cs</DependentUpon>
